typescript/checker/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment3.ts.stderr
error: Unexpected eof
 --> $DIR/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment3.ts:1:9
  |
1 | export =
  |         ^

